# Mix_MAO_Kids

./: .gitignore  CMakeLists.txt  README.md  debug_gif  debug_gif.cpp  test_font.cpp  update_github.sh
src/game/: Game2048.cpp  Game2048.h
src/gif/: gif_wrapper.cpp  gif_wrapper.h
src/main/: main.cpp
